--- a/checkWeatherApp/Base.lproj/Main.storyboard
+++ b/checkWeatherApp/Base.lproj/Main.storyboard
@@ -136,61 +136,59 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7MO-r7-2eL">
-                                <rect key="frame" x="80" y="123" width="255" height="223"/>
+                                <rect key="frame" x="117" y="159" width="181" height="151"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="255" id="Qgd-Rt-Fz5"/>
-                                    <constraint firstAttribute="height" constant="223" id="Rlo-Xb-tuC"/>
+                                    <constraint firstAttribute="height" constant="151" id="duE-0S-yhO"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temperature :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dub-dT-boX">
-                                <rect key="frame" x="80" y="404" width="136" height="28"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <rect key="frame" x="110" y="380" width="106" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fWZ-Dl-Pur">
-                                <rect key="frame" x="224" y="404" width="55" height="27.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <rect key="frame" x="220" y="380" width="41.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Humidity:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OXc-tJ-JNG">
-                                <rect key="frame" x="80" y="475" width="95" height="28"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tc0-Na-cGt">
-                                <rect key="frame" x="183" y="475" width="55" height="28"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <rect key="frame" x="110" y="436" width="73" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="cov-gS-xVE">
                                 <rect key="frame" x="197" y="224" width="20" height="20"/>
                             </activityIndicatorView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tc0-Na-cGt">
+                                <rect key="frame" x="186" y="436" width="41.5" height="20"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ccJ-iZ-1nf"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="fWZ-Dl-Pur" firstAttribute="leading" secondItem="dub-dT-boX" secondAttribute="trailing" constant="8" symbolic="YES" id="2gs-mV-a0o"/>
-                            <constraint firstItem="ccJ-iZ-1nf" firstAttribute="trailing" secondItem="cov-gS-xVE" secondAttribute="trailing" constant="197" id="79Z-sw-Dz9"/>
-                            <constraint firstItem="ccJ-iZ-1nf" firstAttribute="trailing" secondItem="7MO-r7-2eL" secondAttribute="trailing" constant="79" id="CVK-1u-WtA"/>
-                            <constraint firstItem="7MO-r7-2eL" firstAttribute="leading" secondItem="ccJ-iZ-1nf" secondAttribute="leading" constant="80" id="DaU-WA-KqI"/>
-                            <constraint firstItem="tc0-Na-cGt" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="OXc-tJ-JNG" secondAttribute="trailing" constant="8" symbolic="YES" id="Ik6-5X-S6S"/>
-                            <constraint firstItem="ccJ-iZ-1nf" firstAttribute="trailing" secondItem="tc0-Na-cGt" secondAttribute="trailing" constant="176" id="JKx-Pc-C19"/>
-                            <constraint firstItem="cov-gS-xVE" firstAttribute="leading" secondItem="ccJ-iZ-1nf" secondAttribute="leading" constant="197" id="L9Y-wd-qH7"/>
-                            <constraint firstItem="OXc-tJ-JNG" firstAttribute="top" secondItem="dub-dT-boX" secondAttribute="bottom" constant="43" id="Qw9-ER-fbr"/>
-                            <constraint firstItem="ccJ-iZ-1nf" firstAttribute="trailing" secondItem="fWZ-Dl-Pur" secondAttribute="trailing" constant="135" id="Y4r-Dp-MWz"/>
-                            <constraint firstItem="ccJ-iZ-1nf" firstAttribute="trailing" secondItem="dub-dT-boX" secondAttribute="trailing" constant="198" id="cRg-uR-zAj"/>
-                            <constraint firstItem="7MO-r7-2eL" firstAttribute="top" secondItem="ccJ-iZ-1nf" secondAttribute="top" constant="79" id="lHk-un-LvO"/>
-                            <constraint firstItem="dub-dT-boX" firstAttribute="leading" secondItem="ccJ-iZ-1nf" secondAttribute="leading" constant="80" id="lkv-HT-ovX"/>
-                            <constraint firstItem="cov-gS-xVE" firstAttribute="top" secondItem="ccJ-iZ-1nf" secondAttribute="top" constant="180" id="omT-Pi-nEO"/>
-                            <constraint firstItem="ccJ-iZ-1nf" firstAttribute="trailing" secondItem="OXc-tJ-JNG" secondAttribute="trailing" constant="239" id="pKP-T9-MwL"/>
-                            <constraint firstItem="fWZ-Dl-Pur" firstAttribute="top" secondItem="7MO-r7-2eL" secondAttribute="bottom" constant="58" id="r3p-AX-FtI"/>
-                            <constraint firstItem="dub-dT-boX" firstAttribute="top" secondItem="7MO-r7-2eL" secondAttribute="bottom" constant="58" id="sPH-m5-dHe"/>
-                            <constraint firstItem="tc0-Na-cGt" firstAttribute="baseline" secondItem="OXc-tJ-JNG" secondAttribute="baseline" id="uSQ-vB-yjh"/>
-                            <constraint firstItem="OXc-tJ-JNG" firstAttribute="leading" secondItem="ccJ-iZ-1nf" secondAttribute="leading" constant="80" id="zyV-2k-041"/>
+                            <constraint firstItem="OXc-tJ-JNG" firstAttribute="leading" secondItem="ccJ-iZ-1nf" secondAttribute="leading" constant="110" id="5Pg-a9-qcR"/>
+                            <constraint firstItem="7MO-r7-2eL" firstAttribute="top" secondItem="ccJ-iZ-1nf" secondAttribute="top" constant="115" id="9nI-Ne-MYy"/>
+                            <constraint firstItem="tc0-Na-cGt" firstAttribute="leading" secondItem="OXc-tJ-JNG" secondAttribute="trailing" constant="3" id="C0l-yd-rHu"/>
+                            <constraint firstItem="tc0-Na-cGt" firstAttribute="top" secondItem="dub-dT-boX" secondAttribute="bottom" constant="35.5" id="DAY-DO-bif"/>
+                            <constraint firstItem="fWZ-Dl-Pur" firstAttribute="leading" secondItem="dub-dT-boX" secondAttribute="trailing" constant="4" id="HnQ-MV-wdG"/>
+                            <constraint firstItem="tc0-Na-cGt" firstAttribute="leading" secondItem="OXc-tJ-JNG" secondAttribute="trailing" constant="3" id="IDz-LQ-E5B"/>
+                            <constraint firstItem="ccJ-iZ-1nf" firstAttribute="trailing" secondItem="7MO-r7-2eL" secondAttribute="trailing" constant="116" id="QfV-90-dSn"/>
+                            <constraint firstItem="OXc-tJ-JNG" firstAttribute="top" secondItem="dub-dT-boX" secondAttribute="bottom" constant="35.5" id="Seq-bU-fXZ"/>
+                            <constraint firstItem="fWZ-Dl-Pur" firstAttribute="top" secondItem="7MO-r7-2eL" secondAttribute="bottom" constant="70" id="Vei-8s-Fv1"/>
+                            <constraint firstItem="cov-gS-xVE" firstAttribute="centerX" secondItem="UnO-Pz-5r7" secondAttribute="centerX" id="WCs-l9-Vrr"/>
+                            <constraint firstItem="dub-dT-boX" firstAttribute="top" secondItem="7MO-r7-2eL" secondAttribute="bottom" constant="70" id="WxQ-PF-AzQ"/>
+                            <constraint firstItem="ccJ-iZ-1nf" firstAttribute="trailing" secondItem="fWZ-Dl-Pur" secondAttribute="trailing" constant="152.5" id="cse-lc-7gq"/>
+                            <constraint firstItem="fWZ-Dl-Pur" firstAttribute="leading" secondItem="dub-dT-boX" secondAttribute="trailing" constant="4" id="lCV-cE-J41"/>
+                            <constraint firstItem="dub-dT-boX" firstAttribute="leading" secondItem="ccJ-iZ-1nf" secondAttribute="leading" constant="110" id="o5t-4S-DGc"/>
+                            <constraint firstItem="cov-gS-xVE" firstAttribute="top" secondItem="ccJ-iZ-1nf" secondAttribute="top" constant="180" id="p8s-oB-T7b"/>
+                            <constraint firstItem="ccJ-iZ-1nf" firstAttribute="trailing" secondItem="tc0-Na-cGt" secondAttribute="trailing" constant="186.5" id="tgC-RL-fOz"/>
+                            <constraint firstItem="7MO-r7-2eL" firstAttribute="leading" secondItem="ccJ-iZ-1nf" secondAttribute="leading" constant="117" id="zzq-b1-XAg"/>
                         </constraints>
                     </view>
                     <connections>
