--- a/checkWeatherApp/Base.lproj/Main.storyboard
+++ b/checkWeatherApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2Eq-K2-8gZ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="0fp-IR-Lf9">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
@@ -13,18 +13,12 @@
             <objects>
                 <tableViewController storyboardIdentifier="InitialViewController" id="5W6-kt-cdY" customClass="InitialViewController" customModule="checkWeatherApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="zKh-mE-Q57">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Search city" id="0hs-SG-ULj">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            <color key="barTintColor" systemColor="tertiarySystemBackgroundColor"/>
-                            <textInputTraits key="textInputTraits"/>
-                        </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="1Sm-tZ-KAN" detailTextLabel="MAG-ar-jKy" rowHeight="70" style="IBUITableViewCellStyleSubtitle" id="Pne-Or-Ru2" customClass="initialTableViewCell" customModule="checkWeatherApp" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="88.5" width="414" height="70"/>
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="70"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Pne-Or-Ru2" id="WEV-nk-RBM">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="70"/>
@@ -66,7 +60,6 @@
                     </navigationItem>
                     <connections>
                         <outlet property="btn_add" destination="KA8-fw-6UE" id="Eqf-l0-koX"/>
-                        <outlet property="searchBar" destination="0hs-SG-ULj" id="8RY-fY-KVH"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BxN-e8-2Js" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -78,7 +71,7 @@
             <objects>
                 <tableViewController storyboardIdentifier="SearchViewController" id="F3g-dP-OgE" customClass="SearchViewController" customModule="checkWeatherApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="Gqs-Jm-oaS">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Search city" id="mBG-1n-fkf">
@@ -202,13 +195,63 @@
             </objects>
             <point key="canvasLocation" x="1882.608695652174" y="-74.330357142857139"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="6qx-cU-Mo7">
+            <objects>
+                <viewController id="0fp-IR-Lf9" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="lgd-DO-tKB">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Weather Checker" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ijH-Fu-BzN">
+                                <rect key="frame" x="73" y="375" width="268" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="ijH-Fu-BzN" secondAttribute="height" multiplier="67:6" id="tcX-ts-kpD"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1oJ-Iu-86V">
+                                <rect key="frame" x="116" y="431" width="182" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="1oJ-Iu-86V" secondAttribute="height" multiplier="26:5" id="Phv-Wn-oeH"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Click here to continue">
+                                    <backgroundConfiguration key="background">
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </backgroundConfiguration>
+                                    <color key="baseForegroundColor" systemColor="systemTealColor"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <segue destination="2Eq-K2-8gZ" kind="show" id="3Sj-tp-vwk"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Zal-y8-oZP"/>
+                        <color key="backgroundColor" systemColor="systemTealColor"/>
+                        <constraints>
+                            <constraint firstItem="1oJ-Iu-86V" firstAttribute="top" secondItem="ijH-Fu-BzN" secondAttribute="bottom" constant="32" id="GSW-El-uId"/>
+                            <constraint firstItem="ijH-Fu-BzN" firstAttribute="top" secondItem="Zal-y8-oZP" secondAttribute="top" constant="331" id="O24-AL-GQn"/>
+                            <constraint firstItem="Zal-y8-oZP" firstAttribute="trailing" secondItem="1oJ-Iu-86V" secondAttribute="trailing" constant="116" id="PqI-7j-ZE0"/>
+                            <constraint firstItem="Zal-y8-oZP" firstAttribute="trailing" secondItem="ijH-Fu-BzN" secondAttribute="trailing" constant="73" id="rtF-oh-Aml"/>
+                            <constraint firstItem="ijH-Fu-BzN" firstAttribute="leading" secondItem="Zal-y8-oZP" secondAttribute="leading" constant="73" id="uQh-dN-f2y"/>
+                            <constraint firstItem="1oJ-Iu-86V" firstAttribute="leading" secondItem="Zal-y8-oZP" secondAttribute="leading" constant="116" id="wZW-n2-4IE"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uij-zc-yLb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1656.521739130435" y="-51.5625"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="frV-Pi-V1X">
             <objects>
                 <navigationController id="2Eq-K2-8gZ" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="6BA-UC-4t2"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Vw4-cA-pxB">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -224,6 +267,9 @@
         <image name="plus" catalog="system" width="128" height="113"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="tertiarySystemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
